# rengine

./: .gitignore  AGENTS.md  App.cpp  App.hpp  CMakeLists.txt  CMakePresets.json  Camera.cpp  Input.hpp  README.md  Shader.cpp  Shader.hpp  main.cpp  main_f.glsl  main_v.glsl  packages.config  rengine.sln  rengine.vcxproj  rengine.vcxproj.filters  utils.hpp  vcpkg.json
documents/: orbit-camera.md  origin-rebasing.md  render-backend.md  scene.md
resources/images/space_skybox/: space.blend  space.blend1
resources/models/: cubes.fbx  cursor.blend  cursor.blend1  cursor.fbx  sphere.blend  sphere.blend1  sphere.fbx  xz.blend  xz.blend1  xz.fbx
resources/shaders/: cubemap_v.glsl  line_f.glsl  line_v.glsl  main_f.glsl  main_v.glsl  mesh_v.glsl  shaded_mesh_f.glsl  transparent_f.glsl
sources/: AABB.hpp  App.cpp  App.hpp  BoundingBox.hpp  Buffer.hpp  Camera.cpp  Camera.hpp  Cubemap.cpp  Cubemap.hpp  Events.hpp  Frustum.hpp  Input.cpp  Input.hpp  LineBatch.cpp  LineBatch.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Object.cpp  Object.hpp  RenderTarget.hpp  RenderTexture.cpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  main.cpp  utils.hpp
sources/components/: Body.hpp  Camera.cpp  Camera.hpp  Celestial.hpp  LineRenderer.cpp  LineRenderer.hpp  Material.hpp  MeshRenderer.cpp  MeshRenderer.hpp  OrbitalBody.hpp  OriginAnchor.hpp  RenderTexture.hpp  Renderer.hpp  SkyboxRenderer.cpp  SkyboxRenderer.hpp  Transform.cpp  Transform.hpp  WorldPosition.hpp
sources/graphics/: Buffer.hpp  Cubemap.hpp  LineBatch.hpp  Mesh.cpp  Mesh.hpp  RenderBackend.hpp  RenderContext.hpp  RenderLayer.hpp  RenderPass.hpp  RenderTexture.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  types.hpp
sources/graphics/opengl/: OglMesh.hpp  OglPipeline.hpp  OglRenderBackend.cpp  OglRenderBackend.hpp  OglRenderTarget.hpp  OglRenderTexture.cpp  OglRenderTexture.hpp  OglShader.cpp  OglShader.hpp  OglTexture.cpp  OglTexture.hpp
sources/graphics/vulkan/: VulkanRenderBackend.cpp  VulkanRenderBackend.hpp
sources/objects/: FlyingCamera.cpp  FlyingCamera.hpp  ModelObject.cpp  ModelObject.hpp  Navball.cpp  Navball.hpp  OrbitCamera.cpp  OrbitCamera.hpp  TestSatelite.cpp  TestSatelite.hpp
sources/systems/: Clock.cpp  Clock.hpp  OrbitalEngine.cpp  OrbitalEngine.hpp  OriginRebaseSystem.cpp  OriginRebaseSystem.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  RenderEngine.cpp  RenderEngine.hpp  RenderSystem.cpp  RenderSystem.hpp  RendererSystem.cpp  RendererSystem.hpp
tests/: CMakeLists.txt  TestMain.cpp
